# axis-control

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTEXT.md  README.md  docker-compose.dev.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
caddy/: Caddyfile
docs/adr/: 0001-nats-broker-exposure.md
docs/issues/: 001-agent-self-registration.md  002-pending-commands-no-listener.md  003-instance-status-heartbeat-split.md  README.md
nats/: nats.conf
tests/: test_backup_image.py  test_caddyfile.py  test_production_compose.py  test_worker_compose.py
